<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="6dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_here"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/linkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_link"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:visibility="gone"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
